package com.lldbackend.splitwise_05012025.models;

public enum ExpenseType {
    ACTUAL,
    DUMMY
}
